--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5"> by.DA-HUB </p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">더 알아보기</a>
+            <p class="text-faded mb-5"> by. DA-HUB </p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> 더 알아보기 </a>
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">구글 애널리틱스 분석/교육 전문 <br> DA-Hub | 디에이허브</p>
+            <p class="text-faded mb-4">구글 애널리틱스를 활용한 분석/교육 전문 <br> DA-Hub | 디에이허브</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
           </div>
         </div>
