--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5"> by. DA-HUB </p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> 더 알아보기 </a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> 연습페이지 </a>
           </div>
         </div>
       </div>
