--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>구글 애널리틱스 연습을 위한 페이지입니다.</strong>
+               <a class="go-to-example-page" style ="color:white" href="https://analystyun.github.io/">
+                 <strong>구글 애널리틱스 연습을 위한 페이지입니다.</strong></a>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5"> by. DA-HUB </p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> 연습페이지 </a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> 더 알아보기 </a>
           </div>
         </div>
       </div>
