--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-               <a class="go-to-example-page" style ="color:white" href="https://analystyun.github.io/">
+               <a class="go-to-example-page" style ="color:white" href="https://analystyun.github.io/?utm_source=da-hub-test">
                  <strong>구글 애널리틱스 연습을 위한 페이지입니다.</strong></a>
             </h1>
             <hr>
