--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5"> by. DA-HUB </p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> 더 알아보기 </a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" onclick="gtag('event','더알아보기',{'event_category' : '더알아보기_da-hub'});"> 더 알아보기 </a>
           </div>
         </div>
       </div>
