--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Hyokyeong Yun">
+    <meta name="author" content="Example Page of Google Analytics">
 
     <title>Google Analytics - 구글 애널리틱스 실습 페이지 | 디에이허브</title>
 
